Project Development Phase/Sprint 2/kubernetes/ibm_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-app

spec:
  replicas: 3
  selector:
    matchLabels:
      app: pet-app
  template:
    metadata:
      labels:
        app: pet-app

    spec:
      containers:
        - name: pet-app
          image: jp.icr.io/ns-v1/pet
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
