Project Development Phase/Sprint 2/kubernetes/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet
spec:
  type: NodePort
  ports:
    - port: 5000
  selector:
    app: pet
